--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,14 @@ services:
       - "80:80"
     environment:
       - NODE_ENV=production
-      - REACT_APP_API_URL=http://api:8000  # Use service name for inter-container communication
-      # - REACT_APP_METRICS_URL=http://prometheus:9090  # Commented until Prometheus is added
-    volumes:
-      - ./services/frontend:/app  # Keep for development, remove in production if not needed
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://api:8000}
+      - REACT_APP_METRICS_URL=${REACT_APP_METRICS_URL:-http://prometheus:9090}
     depends_on:
       - api
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]  # Check if web server is running
+      test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -29,75 +27,70 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ENVIRONMENT=production
+      - ENVIRONMENT=${ENVIRONMENT:-production}
       - PYTHONUNBUFFERED=1
-      # Postgres variables (commented until integration is confirmed)
-      # - POSTGRES_USER=postgres
-      # - POSTGRES_PASSWORD=postgres
-      # - POSTGRES_HOST=db
-      # - POSTGRES_PORT=5432
-      # - POSTGRES_DB=omnimind
-      # - DATABASE_URL=postgresql://postgres:postgres@db:5432/omnimind
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=redis
-      - REDIS_URL=redis://:redis@redis:6379/0
-      - BACKEND_CORS_ORIGINS=["http://localhost","http://localhost:80","http://localhost:3000","http://frontend:80","https://app.apiplatform.ai"]
-      - SECRET_KEY=KXWq4ECxVJwFNUfdzpKXOUOavqB_s-Cg0Q7mX03AO0v7bYjmsDv-92l8vbVZxC_j59N_1Af1gL8
-      - ALGORITHM=HS256
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - SECRET_KEY=${SECRET_KEY}
+      - ALGORITHM=${ALGORITHM:-HS256}
+      - REDIS_URL=${REDIS_URL:-redis://:${REDIS_PASSWORD}@redis:6379/0}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}}
+      - ML_SERVICE_URL=${ML_SERVICE_URL:-http://ollama:11434}
+      - OLLAMA_HOST=${OLLAMA_HOST:-http://ollama:11434}
+      - METRICS_URL=${REACT_APP_METRICS_URL:-http://prometheus:9090}
+      - SMTP_HOST=${SMTP_HOST:-smtp.gmail.com}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_USER=${SMTP_USER:-noreply@omnimind.example.com}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - EMAIL_FROM=${EMAIL_FROM:-noreply@omnimind.example.com}
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:80,http://frontend:80,https://app.apiplatform.ai}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://:${REDIS_PASSWORD}@redis:6379/0}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND:-redis://:${REDIS_PASSWORD}@redis:6379/0}
       - PROMETHEUS_MULTIPROC_DIR=/tmp/prometheus
-      - ML_SERVICE_URL=http://ollama:11434
-      - OLLAMA_HOST=http://ollama:11434
-      - LOG_LEVEL=DEBUG
-      # SMTP variables (commented until email integration is implemented)
-      # - SMTP_HOST=smtp.gmail.com
-      # - SMTP_PORT=587
-      # - SMTP_USER=${SMTP_USER:-noreply@omnimind.example.com}
-      # - SMTP_PASSWORD=${SMTP_PASSWORD:-your-app-password}
-      # - EMAIL_FROM=noreply@omnimind.example.com
-      # Celery variables (commented until task queue is implemented)
-      # - CELERY_BROKER_URL=redis://:redis@redis:6379/0
-      # - CELERY_RESULT_BACKEND=redis://:redis@redis:6379/0
     volumes:
-      - ./services/api:/app
+      - ./services/api:/app  # Remove in production
     networks:
       - app_network
     depends_on:
       - redis
+      - db
       - ollama
-      # - db  # Uncomment when Postgres is integrated
+      - prometheus
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 5
 
-  # db:
-  #   image: postgres:16
-  #   environment:
-  #     - POSTGRES_USER=postgres
-  #     - POSTGRES_PASSWORD=postgres
-  #     - POSTGRES_DB=omnimind
-  #   volumes:
-  #     - pgdata:/var/lib/postgresql/data
-  #   networks:
-  #     - app_network
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "pg_isready -U postgres"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 5
-
-  redis:
-    image: redis:7
-    command: redis-server --requirepass redis
+  db:
+    image: postgres:16
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB:-omnimind}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "redis", "ping"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    ports:
+      - "5432:5432"  # Expose for local testing, remove in production if not needed
+
+  redis:
+    image: redis:7
+    command: redis-server --requirepass ${REDIS_PASSWORD:-redis}
+    networks:
+      - app_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis}", "ping"]
       interval: 30s
       timeout: 10s
       retries: 5
+    ports:
+      - "6379:6379"  # Expose for local testing, remove in production if not needed
 
   ollama:
     image: ollama/ollama:latest
@@ -107,6 +100,20 @@ services:
       - app_network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - app_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9090/-/healthy"]
       interval: 30s
       timeout: 10s
       retries: 5
