--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,30 +3,20 @@ global:
   evaluation_interval: 15s
   scrape_timeout: 10s
 
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets:
-          # - alertmanager:9093
-
-rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
-
 scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+
   - job_name: 'api'
     static_configs:
       - targets: ['api:8000']
     metrics_path: '/metrics'
 
-  - job_name: 'ml'
+  - job_name: 'ollama'
     static_configs:
-      - targets: ['ml:8000']
+      - targets: ['ollama:11434']
     metrics_path: '/metrics'
-
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
 
   - job_name: 'node'
     static_configs:
@@ -44,6 +34,7 @@ scrape_configs:
     static_configs:
       - targets: ['postgres-exporter:9187']
 
-  - job_name: 'grafana'
+  - job_name: 'elasticsearch'
     static_configs:
-      - targets: ['grafana:3000'] 
+      - targets: ['elasticsearch:9200']
+    metrics_path: '/_prometheus/metrics'
