--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,46 @@
 # Core Dependencies
-fastapi==0.115.0
-uvicorn==0.32.0
-pydantic==2.4.2
+fastapi==0.115.4
+uvicorn==0.34.2
+pydantic-settings==2.5.2
 python-dotenv==1.0.0
-python-multipart==0.0.6
+python-multipart==0.0.10
 aiofiles==23.2.1
 tenacity==8.2.3
-httpx==0.25.0
+httpx==0.27.2
 aiohttp==3.9.3
+email-validator==2.1.0
+python-slugify==8.0.1
 
-# AI & ML
-torch==2.7.0
-transformers==4.35.0
-ollama==0.1.0
-whisperx==3.1.0
-elevenlabs==0.2.24
-sentence-transformers==2.2.2
-numpy==1.24.0
-scikit-learn==1.3.2
-nltk==3.8.1
-spacy==3.7.2
-
-# Database & Vector Store
-chromadb==0.4.15
-redis==5.0.1
-asyncpg==0.29.0
-psycopg2-binary==2.9.10
-neo4j==5.14.0
-hnswlib==0.7.0
+# Database & Caching
+aioredis==2.0.1
+psycopg2-binary==2.9.9
 sqlalchemy==2.0.36
 alembic==1.12.1
 
-# Security & Compliance
-cryptography==41.0.3
-python-jose==3.5.0
+# Security & Authentication
+python-jose[cryptography]==3.3.0
 passlib==1.7.4
 bcrypt==4.0.1
 PyJWT==2.8.0
 pyotp==2.9.0
-qrcode==7.4.2
-geoip2==4.8.0
+cryptography==41.0.3
+
+# AI & ML Integration
+ollama==0.3.2
 
 # Monitoring & Performance
-prometheus-client==0.17.1
+prometheus-client==0.21.0
+psutil==6.0.0
 opentelemetry-api==1.21.0
 opentelemetry-sdk==1.21.0
 opentelemetry-instrumentation-fastapi==0.41b0
-opentelemetry-exporter-prometheus==0.54b1
-opentelemetry-instrumentation-sqlalchemy==0.41b0
 opentelemetry-instrumentation-redis==0.41b0
 opentelemetry-instrumentation-httpx==0.41b0
+opentelemetry-instrumentation-sqlalchemy==0.41b0
+python-logstash-async==2.4.0
 sentry-sdk==1.35.0
 structlog==23.2.0
-psutil==5.9.8
-
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-pytest-benchmark==4.0.0
-pytest-mock==3.12.0
-pytest-env==1.1.1
-pytest-xdist==3.5.0
-coverage==7.3.2
 
 # Utilities
 python-dateutil==2.8.2
 pytz==2023.3
-email-validator==2.1.0
-python-slugify==8.0.1
